--- a/Semana 1/102-enlaces.html
+++ b/Semana 1/102-enlaces.html
@@ -13,7 +13,7 @@
                 ENLACES DEL BOOTCAMP
             </h1>
         </header>
-        <!-- navegacion entre links -->
+        <!-- navegacion entre links 1-->
         <nav>
             <h2>menú</h2>
             <!-- etiqueta a donde te va a llevar recomendable colocar con ./ -->
