--- a/Semana 2/formularios.html
+++ b/Semana 2/formularios.html
@@ -7,7 +7,7 @@
     <title>Formulario</title>
 </head>
 <body>
-    <form action="">
+    <form action="POST">
 
         <label for="nombre">Nombre</label>
         <input type="text" name="nombre" id="nombre" placeholder="nombre">
