Modificando codigos de formularios

--- a/Semana 2/formularios.html
+++ b/Semana 2/formularios.html
@@ -13,7 +13,7 @@
         <input type="text" name="nombre" id="nombre" placeholder="nombre">
 
         <label for="tef">telefono</label>
-        <input type="number" name="tef" id="tef" placeholder="telefono">
+        <input type="number" name="tef" id="tef" placeholder="telefono" pattern="^\+?[0-9]{3}-?[0-9]{6,12}$">
 
         <button type="submit" title="submit">Enviar Info al server</button>
 
