Usando patrones regex

--- a/Semana 2/formularios.html
+++ b/Semana 2/formularios.html
@@ -13,11 +13,15 @@
         <input type="text" name="nombre" id="nombre" placeholder="nombre">
 
         <label for="tef">telefono</label>
-        <input type="number" name="tef" id="tef" placeholder="telefono" pattern="^\+?[0-9]{3}-?[0-9]{6,12}$">
+        <input type="tel" name="tef" id="tef" placeholder="telefono" pattern="^\+?[0-9]{3}-?[0-9]{6,12}$">
+
+        <label for="email">Email</label>
+        <input type="email" name="Correo-e" id="Correo-e" placeholder="mail@mail.com">
 
         <button type="submit" title="submit">Enviar Info al server</button>
 
-
+        <label for="password">Contraseña</label>
+        <input type="password" name="password" id="password">
 
     </form>
 
